<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="raulete.com.footballfield.s002addplayer.AddPlayerActivity">

    <Button
        android:id="@+id/activity_exchange_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Exchange Player"
        android:onClick="exchangePlayer"/>

    <raulete.com.footballfieldlayout.FootballFieldLayout
        android:id="@+id/activity_field"
        android:layout_below="@id/activity_exchange_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>
