<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="player_undefined" type="id">player_undefined</item>
    <item name="team_undefined" type="id">team_undefined</item>

</resources>