<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="raulete.com.footballfield.s012adplayercustomposition.CustomPositionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/addLocalPlayer"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Local"
            android:onClick="addLocalPlayer"/>
        <Button
            android:id="@+id/addLocalPlayerMidfield"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Local Mid"
            android:onClick="addLocalPlayerMidfield"/>
        <Button
            android:id="@+id/addGuestPlayerMidfield"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Guest Mid"
            android:onClick="addGuestPlayerMidfield"/>
        <Button
            android:id="@+id/addGuestPlayer"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Guest"
            android:onClick="addGuestPlayer"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/setBoundariesNone"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="No Boundaries"
            android:onClick="setBoundariesNone"/>
        <Button
            android:id="@+id/setBoundariesField"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Field"
            android:onClick="setBoundariesField"/>
        <Button
            android:id="@+id/setBoundariesHalfField"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Own Field"
            android:onClick="setBoundariesHalfField"/>
    </LinearLayout>
    <raulete.com.footballfieldlayout.FootballFieldLayout
        android:id="@+id/activity_field"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
