<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="raulete.com.footballfield.s012adplayercustomposition.CustomPositionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/activity_add_button"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Add Player"
            android:onClick="addPlayer"/>

        <Button
            android:id="@+id/activity_change_field_button"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Change Field"
            android:onClick="changeField"/>

        <Button
            android:id="@+id/activity_add_teams_button"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Add Two Teams"
            android:onClick="addTwoTeams"/>
    </LinearLayout>
    <raulete.com.footballfieldlayout.FootballFieldLayout
        android:id="@+id/activity_field"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
