<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="raulete.com.footballfield.s012adplayercustomposition.CustomPositionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/activity_remove_messi"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Remove Messi"
            android:onClick="removeMessi"/>

        <Button
            android:id="@+id/activity_add_messi_neymar"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="add Two"
            android:onClick="addTwo"/>

        <Button
            android:id="@+id/activity_remove_neymar"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Remove Neymar"
            android:onClick="removeNeymar"/>
    </LinearLayout>
    <raulete.com.footballfieldlayout.FootballFieldLayout
        android:id="@+id/activity_field"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
